--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -390,7 +390,7 @@ section {
         border-radius: 15px;
         box-shadow: var(--box-shadow-1);
         transition: var(--transition);
-        border: 2px solid var(--color-highlight);
+        border: 3px solid var(--color-highlight);
 
         
             &:hover .hover-items {
@@ -404,7 +404,7 @@ section {
             width: 100%;
             height: 100%;
             object-fit: cover;
-            border-radius: 15px 15px 0 0;
+            border-radius: 13px 13px 0 0;
         }
 
         .hover-items {
@@ -422,7 +422,7 @@ section {
             opacity: 0;
             transform: scale(0);
             transition: var(--transition);
-            border: 2px solid var(--color-text);
+            border: 3px solid var(--color-text);
 
             h3 {
                 font-size: 1.5rem;
@@ -468,11 +468,11 @@ section {
 }
 
 .portfolio-text {
-    margin-top: -7px;
+    margin-top: -12px;
     padding: 1.1rem;
     border-top: 8px solid var(--color-highlight);
     background-color: var(--color-secondary);
-    border-radius: 0 0 15px 15px;
+    border-radius: 0 0 12px 12px;
 
     h4 {
         font-size: 1.5rem;
@@ -615,7 +615,6 @@ section {
 // CONTROLS
 
 .theme-btn {
-    transform: scale(1);
     padding: 1rem;
     cursor: pointer;
     background-color: var(--color-secondary);
@@ -630,14 +629,6 @@ section {
     transition: var(--transition);
     border: 2px solid var(--color-highlight);
 
-    &:hover {
-        transform: scale(1.25);
-        transition: var(--transition);
-        i{
-            color: var(--color-highlight);
-        }
-    }
-
     i {
         font-size: 1.2rem;
         color: var(--color-text);
@@ -645,6 +636,16 @@ section {
     }
 }
 
+.pressed {
+    transform: scale(1.25);
+    transition: var(--transition);
+    background-color: var(--color-highlight);
+    border: 3px solid var(--color-text);
+
+    i {
+        color: var(--color-text);
+    }
+}
 
 .controls {
     position: fixed;
@@ -701,18 +702,6 @@ section {
         }
     }
 
-}
-
-
-.pressed {
-    transform: scale(1.25);
-    transition: var(--transition);
-    background-color: var(--color-highlight);
-    border: 2px solid var(--color-text) !important;
-
-    i {
-        color: var(--color-text);
-    }
 }
 
 
